--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -22,38 +22,38 @@
     "@mona-ca/tailwind-helpers": "workspace:*",
     "@mona-ca/ui": "workspace:*",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native": "^7.0.14",
     "ajv": "^8.17.1",
-    "expo": "~51.0.38",
-    "expo-dev-client": "~4.0.28",
-    "expo-font": "~12.0.10",
-    "expo-linking": "^6.3.1",
-    "expo-router": "~3.5.23",
-    "expo-splash-screen": "~0.27.6",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "^3.0.7",
-    "expo-web-browser": "^13.0.3",
-    "jotai": "^2.10.1",
-    "nativewind": "^4.1.17",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-keyboard-controller": "^1.14.2",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-svg": "15.2.0",
+    "expo": "^52.0.0",
+    "expo-dev-client": "~5.0.10",
+    "expo-font": "~13.0.3",
+    "expo-linking": "~7.0.5",
+    "expo-router": "~4.0.17",
+    "expo-splash-screen": "~0.29.21",
+    "expo-status-bar": "~2.0.1",
+    "expo-system-ui": "~4.0.7",
+    "expo-web-browser": "~14.0.2",
+    "jotai": "^2.11.2",
+    "nativewind": "^4.1.23",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.6",
+    "react-native-keyboard-controller": "^1.16.1",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
     "react-native-web": "^0.19.13",
-    "tailwindcss": "^3.4.14"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.8",
+    "@babel/core": "^7.26.7",
     "@mona-ca/tailwind-config": "workspace:*",
     "@mona-ca/tsconfig": "workspace:*",
-    "@types/react": "~18.2.79",
+    "@types/react": "~18.3.12",
     "babel-plugin-module-resolver": "^5.0.2",
     "jest": "^29.7.0",
-    "jest-expo": "~51.0.4",
+    "jest-expo": "~52.0.3",
     "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.2.0"
   }
