--- a/apps/catalog/package.json
+++ b/apps/catalog/package.json
@@ -17,69 +17,70 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
     "@gorhom/bottom-sheet": "^4.6.4",
-    "@react-navigation/native": "^6.1.18",
-    "expo": "~51.0.38",
-    "expo-constants": "~16.0.2",
-    "expo-dev-client": "~4.0.28",
-    "expo-font": "~12.0.10",
-    "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.23",
-    "expo-splash-screen": "~0.27.6",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.7",
-    "expo-web-browser": "~13.0.3",
-    "nativewind": "4.1.16",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-gesture-handler": "~2.16.2",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-svg": "15.2.0",
+    "@react-navigation/native": "^7.0.14",
+    "expo": "^52.0.28",
+    "expo-constants": "~17.0.5",
+    "expo-dev-client": "~5.0.10",
+    "expo-font": "~13.0.3",
+    "expo-linking": "~7.0.5",
+    "expo-router": "~4.0.17",
+    "expo-splash-screen": "~0.29.21",
+    "expo-status-bar": "~2.0.1",
+    "expo-system-ui": "~4.0.7",
+    "expo-web-browser": "~14.0.2",
+    "nativewind": "^4.1.23",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.6",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-keyboard-controller": "^1.16.1",
+    "react-native-reanimated": "~3.16.7",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.8",
-    "@babel/plugin-transform-class-static-block": "^7.25.8",
+    "@babel/core": "^7.26.7",
+    "@babel/plugin-transform-class-static-block": "^7.26.0",
     "@chromatic-com/storybook": "^2.0.2",
     "@mona-ca/postcss": "workspace:*",
     "@mona-ca/tailwind-config": "workspace:*",
     "@mona-ca/tsconfig": "workspace:*",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native/babel-preset": "^0.74.88",
-    "@storybook/addon-a11y": "^8.3.6",
+    "@react-native/babel-preset": "^0.74.89",
+    "@storybook/addon-a11y": "^8.5.2",
     "@storybook/addon-actions": "8.1.11",
-    "@storybook/addon-essentials": "^8.3.6",
-    "@storybook/addon-interactions": "^8.3.6",
-    "@storybook/addon-links": "^8.3.6",
-    "@storybook/addon-onboarding": "^8.3.6",
-    "@storybook/addon-ondevice-actions": "^8.3.9",
-    "@storybook/addon-ondevice-controls": "^8.3.9",
+    "@storybook/addon-essentials": "^8.5.2",
+    "@storybook/addon-interactions": "^8.5.2",
+    "@storybook/addon-links": "^8.5.2",
+    "@storybook/addon-onboarding": "^8.5.2",
+    "@storybook/addon-ondevice-actions": "^8.5.3",
+    "@storybook/addon-ondevice-controls": "^8.5.3",
     "@storybook/addon-react-native-web": "^0.0.24",
-    "@storybook/addon-storysource": "^8.3.6",
-    "@storybook/addon-styling-webpack": "^1.0.0",
-    "@storybook/addon-themes": "^8.3.6",
-    "@storybook/addon-webpack5-compiler-swc": "^1.0.5",
-    "@storybook/blocks": "^8.3.6",
+    "@storybook/addon-storysource": "^8.5.2",
+    "@storybook/addon-styling-webpack": "^1.0.1",
+    "@storybook/addon-themes": "^8.5.2",
+    "@storybook/addon-webpack5-compiler-swc": "^1.0.6",
+    "@storybook/blocks": "^8.5.2",
     "@storybook/preview-api": "8.1.11",
-    "@storybook/react": "^8.3.6",
-    "@storybook/react-native": "^8.3.9",
-    "@storybook/react-webpack5": "^8.3.6",
-    "@storybook/test": "^8.3.6",
+    "@storybook/react": "^8.5.2",
+    "@storybook/react-native": "^8.5.3",
+    "@storybook/react-webpack5": "^8.5.2",
+    "@storybook/test": "^8.5.2",
     "@storybook/test-runner": "^0.17.0",
-    "@types/react": "~18.2.79",
+    "@types/react": "~18.3.18",
     "babel-loader": "^9.2.1",
     "babel-plugin-module-resolver": "^5.0.2",
     "babel-plugin-react-native-web": "^0.19.13",
     "css-loader": "^7.1.2",
-    "postcss": "^8.4.47",
+    "postcss": "^8.5.1",
     "postcss-loader": "^8.1.1",
     "prop-types": "^15.8.1",
     "react-native-svg-transformer": "^1.5.0",
-    "storybook": "^8.3.6",
+    "storybook": "^8.5.2",
     "storybook-dark-mode": "^4.0.2",
     "style-loader": "^4.0.0",
-    "tailwindcss": "^3.4.14"
+    "tailwindcss": "^3.4.17"
   }
 }
