--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -18,29 +18,29 @@
     "db:std:remote": "drizzle-kit studio  --config drizzle.studio.remote.config.ts"
   },
   "dependencies": {
-    "@elysiajs/swagger": "1.1.5",
+    "@elysiajs/swagger": "1.2.0",
     "@mona-ca/argon2id": "workspace:*",
     "@mona-ca/core": "workspace:*",
     "@oslojs/crypto": "^1.0.1",
     "@oslojs/encoding": "^1.1.0",
-    "@upstash/ratelimit": "^2.0.4",
+    "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.3",
-    "arctic": "2.0.1",
+    "arctic": "^3.2.2",
     "drizzle-orm": "^0.30.10",
-    "elysia": "1.1.23",
-    "resend": "^4.0.1",
+    "elysia": "~1.2.10",
+    "resend": "^4.1.1",
     "ulid-workers": "^2.1.0"
   },
   "devDependencies": {
-    "@cloudflare/vitest-pool-workers": "^0.5.32",
-    "@cloudflare/workers-types": "^4.20241127.0",
+    "@cloudflare/vitest-pool-workers": "^0.6.11",
+    "@cloudflare/workers-types": "^4.20250129.0",
     "@mona-ca/tsconfig": "workspace:*",
-    "better-sqlite3": "^11.6.0",
+    "better-sqlite3": "^11.8.1",
     "drizzle-kit": "^0.21.4",
     "pretty-format": "^29.7.0",
     "vite-tsconfig-paths": "^4.3.2",
-    "vitest": "~2.0.5",
-    "wrangler": "3.91.0"
+    "vitest": "2.1.8",
+    "wrangler": "~3.106.0"
   },
   "overrides": {
     "pretty-format": "^29.7.0"
