♻️ refactor(packages): remove unused `swc-plugin-transform-variable-to-wasm-import` package

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["packages/argon2id", "packages/swc-plugin-*"]
+members = ["packages/argon2id"]
 resolver = "2"
 
 [profile.release]
