--- a/biome.json
+++ b/biome.json
@@ -51,7 +51,7 @@
         "useSortedClasses": {
           "level": "warn",
           "options": {
-            "functions": ["tv", "twMerge", "twPseudo"]
+            "functions": ["tv", "twMerge"]
           }
         }
       },
