refactor/remake tailwind packages (#59)
* ♻️ refactor(packages): remove unused `swc-plugin-transform-variable-to-wasm-import` package

* 🪦 feat(packages/tailwind-helpers): remove twColorPalette

* 🪦 feat(packages/tailwind-helpers): remove twPseudo and related configurations

* ⚙️ chore: add TypeScript build info files

* 🪦 feat(packages/tailwind-helpers): remove unused types and scripts related to pseudo-classes

* 📦 dep(packages/tailwind-helpers): add clsx

* create  function

--- a/biome.json
+++ b/biome.json
@@ -51,7 +51,7 @@
         "useSortedClasses": {
           "level": "warn",
           "options": {
-            "functions": ["tv", "twMerge", "twPseudo", "twColorPalette"]
+            "functions": ["tv", "twMerge", "cn", "clsx"]
           }
         }
       },
