--- a/apps/api/.dev.vars.example
+++ b/apps/api/.dev.vars.example
@@ -14,3 +14,6 @@ SESSION_PEPPER=
 # Upstash Redis
 UPSTASH_REDIS_REST_URL=
 UPSTASH_REDIS_REST_TOKEN=
+
+# Cloudflare Turnstile
+CF_TURNSTILE_SECRET=
