--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
     "next": "^14.2.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-turnstile": "^1.1.4",
     "tailwindcss": "^3.4.7"
   },
   "devDependencies": {
