--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -2,9 +2,9 @@
   "name": "@mona-ca/api",
   "version": "0.1.0",
   "type": "module",
-  "main": "./src/app/index.ts",
+  "main": "./src/index.ts",
   "scripts": {
-    "dev": "wrangler dev ./src/app/index.ts",
+    "dev": "wrangler dev ./src/server.ts",
     "check": "biome check --error-on-warnings --no-errors-on-unmatched",
     "check:fix": "bun run check --write",
     "build": "wrangler deploy --dry-run --outdir dist",
@@ -18,24 +18,25 @@
     "db:std:remote": "drizzle-kit studio  --config drizzle.studio.remote.config.ts"
   },
   "dependencies": {
-    "@elysiajs/swagger": "1.2.0",
+    "@elysiajs/swagger": "^1.2.2",
     "@mona-ca/argon2id": "workspace:*",
     "@mona-ca/core": "workspace:*",
     "@oslojs/crypto": "^1.0.1",
     "@oslojs/encoding": "^1.1.0",
     "@upstash/ratelimit": "^2.0.5",
-    "@upstash/redis": "^1.34.3",
-    "arctic": "^3.2.2",
+    "@upstash/redis": "^1.34.6",
+    "arctic": "^3.6.0",
     "drizzle-orm": "^0.30.10",
-    "elysia": "~1.2.10",
-    "resend": "^4.1.1",
+    "elysia": "~1.2.25",
+    "resend": "^4.2.0",
     "ulid-workers": "^2.1.0"
   },
   "devDependencies": {
-    "@cloudflare/vitest-pool-workers": "^0.6.11",
-    "@cloudflare/workers-types": "^4.20250129.0",
+    "@cloudflare/vitest-pool-workers": "^0.6.16",
+    "@cloudflare/workers-types": "^4.20250404.0",
     "@mona-ca/tsconfig": "workspace:*",
-    "better-sqlite3": "^11.8.1",
+    "@scalar/types": "0.1.5",
+    "better-sqlite3": "^11.9.1",
     "drizzle-kit": "^0.21.4",
     "pretty-format": "^29.7.0",
     "vite-tsconfig-paths": "^4.3.2",
@@ -43,6 +44,7 @@
     "wrangler": "~3.106.0"
   },
   "overrides": {
-    "pretty-format": "^29.7.0"
+    "pretty-format": "^29.7.0",
+    "@scalar/types": "0.1.5"
   }
 }
