--- a/apps/api/wrangler.toml
+++ b/apps/api/wrangler.toml
@@ -1,7 +1,7 @@
 name = "mona-ca-api"
 compatibility_date = "2024-04-19"
 compatibility_flags = ["nodejs_compat"]
-main = "./src/app/index.ts"
+main = "./src/server.ts"
 
 routes = [{ pattern = "api.mona-ca.com", custom_domain = true }]
 
