--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -41,7 +41,7 @@
     "pretty-format": "^29.7.0",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "2.1.8",
-    "wrangler": "~3.106.0"
+    "wrangler": "^4.9.1"
   },
   "overrides": {
     "pretty-format": "^29.7.0",
