--- a/apps/api/.dev.vars.example
+++ b/apps/api/.dev.vars.example
@@ -11,6 +11,7 @@ RESEND_API_KEY=
 PASSWORD_PEPPER=
 SESSION_PEPPER=
 EMAIL_VERIFICATION_SESSION_PEPPER=
+PASSWORD_RESET_SESSION_PEPPER=
 
 # Upstash Redis
 UPSTASH_REDIS_REST_URL=
@@ -18,3 +19,6 @@ UPSTASH_REDIS_REST_TOKEN=
 
 # Cloudflare Turnstile
 CF_TURNSTILE_SECRET=
+
+# HMAC Secret
+OAUTH_STATE_HMAC_SECRET=
