🎈 feat(api/env/schema): add account association session pepper and state HMAC secret

--- a/apps/api/.dev.vars.example
+++ b/apps/api/.dev.vars.example
@@ -12,6 +12,7 @@ PASSWORD_PEPPER=
 SESSION_PEPPER=
 EMAIL_VERIFICATION_SESSION_PEPPER=
 PASSWORD_RESET_SESSION_PEPPER=
+ACCOUNT_ASSOCIATION_SESSION_PEPPER=
 
 # Upstash Redis
 UPSTASH_REDIS_REST_URL=
@@ -22,3 +23,4 @@ CF_TURNSTILE_SECRET=
 
 # HMAC Secret
 OAUTH_STATE_HMAC_SECRET=
+ACCOUNT_ASSOCIATION_STATE_HMAC_SECRET=
