--- a/apps/catalog/package.json
+++ b/apps/catalog/package.json
@@ -15,15 +15,16 @@
     "check:fix": "bun run check --write"
   },
   "dependencies": {
+    "@expo-google-fonts/kiwi-maru": "^0.3.0",
     "@expo/vector-icons": "^14.0.4",
     "@gorhom/bottom-sheet": "^4.6.4",
     "@react-navigation/native": "^7.0.14",
-    "expo": "^52.0.28",
+    "expo": "~52.0.46",
     "expo-constants": "~17.0.5",
     "expo-dev-client": "~5.0.10",
     "expo-font": "~13.0.3",
     "expo-linking": "~7.0.5",
-    "expo-router": "~4.0.17",
+    "expo-router": "4.0.20",
     "expo-splash-screen": "~0.29.21",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.7",
@@ -31,7 +32,7 @@
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.6",
+    "react-native": "0.76.9",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-keyboard-controller": "^1.16.1",
     "react-native-reanimated": "~3.16.7",
@@ -49,24 +50,24 @@
     "@mona-ca/tsconfig": "workspace:*",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native/babel-preset": "^0.74.89",
-    "@storybook/addon-a11y": "^8.5.2",
+    "@storybook/addon-a11y": "^8.6.12",
     "@storybook/addon-actions": "8.1.11",
-    "@storybook/addon-essentials": "^8.5.2",
-    "@storybook/addon-interactions": "^8.5.2",
-    "@storybook/addon-links": "^8.5.2",
-    "@storybook/addon-onboarding": "^8.5.2",
-    "@storybook/addon-ondevice-actions": "^8.5.3",
-    "@storybook/addon-ondevice-controls": "^8.5.3",
+    "@storybook/addon-essentials": "^8.6.12",
+    "@storybook/addon-interactions": "^8.6.12",
+    "@storybook/addon-links": "^8.6.12",
+    "@storybook/addon-onboarding": "^8.6.12",
+    "@storybook/addon-ondevice-actions": "^8.6.2",
+    "@storybook/addon-ondevice-controls": "^8.6.2",
     "@storybook/addon-react-native-web": "^0.0.24",
-    "@storybook/addon-storysource": "^8.5.2",
+    "@storybook/addon-storysource": "^8.6.12",
     "@storybook/addon-styling-webpack": "^1.0.1",
-    "@storybook/addon-themes": "^8.5.2",
+    "@storybook/addon-themes": "^8.6.12",
     "@storybook/addon-webpack5-compiler-swc": "^1.0.6",
-    "@storybook/blocks": "^8.5.2",
+    "@storybook/blocks": "^8.6.12",
     "@storybook/preview-api": "8.1.11",
-    "@storybook/react": "^8.5.2",
-    "@storybook/react-native": "^8.5.3",
-    "@storybook/react-webpack5": "^8.5.2",
+    "@storybook/react": "^8.6.12",
+    "@storybook/react-native": "^8.6.2",
+    "@storybook/react-webpack5": "^8.6.12",
     "@storybook/test": "^8.5.2",
     "@storybook/test-runner": "^0.17.0",
     "@types/react": "~18.3.18",
