--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -24,20 +24,20 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^7.0.14",
     "ajv": "^8.17.1",
-    "expo": "^52.0.0",
-    "expo-dev-client": "~5.0.10",
+    "expo": "~52.0.46",
+    "expo-dev-client": "~5.0.20",
     "expo-font": "~13.0.3",
     "expo-linking": "~7.0.5",
-    "expo-router": "~4.0.17",
-    "expo-splash-screen": "~0.29.21",
+    "expo-router": "4.0.20",
+    "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
-    "expo-system-ui": "~4.0.7",
+    "expo-system-ui": "~4.0.9",
     "expo-web-browser": "~14.0.2",
     "jotai": "^2.11.2",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.6",
+    "react-native": "0.76.9",
     "react-native-keyboard-controller": "^1.16.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
@@ -53,7 +53,7 @@
     "@types/react": "~18.3.12",
     "babel-plugin-module-resolver": "^5.0.2",
     "jest": "^29.7.0",
-    "jest-expo": "~52.0.3",
+    "jest-expo": "~52.0.6",
     "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.2.0"
   }
