🎈 feat(dependencies): update package versions and add new dependencies for improved functionality

--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -41,7 +41,8 @@
           },
           "imageWidth": 160
         }
-      ]
+      ],
+      "expo-secure-store"
     ],
     "experiments": {
       "typedRoutes": true,
