--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -17,8 +17,10 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
+    "@hookform/resolvers": "^5.1.1",
     "@mona-ca/core": "workspace:*",
     "@mona-ca/design-tokens": "workspace:*",
+    "@mona-ca/eden-fetch": "workspace:*",
     "@mona-ca/tailwind-helpers": "workspace:*",
     "@mona-ca/ui": "workspace:*",
     "@react-native-async-storage/async-storage": "1.23.1",
@@ -28,7 +30,8 @@
     "expo-dev-client": "~5.0.20",
     "expo-font": "~13.0.3",
     "expo-linking": "~7.0.5",
-    "expo-router": "4.0.20",
+    "expo-router": "~4.0.21",
+    "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.9",
@@ -37,14 +40,19 @@
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.58.1",
     "react-native": "0.76.9",
     "react-native-keyboard-controller": "^1.16.1",
+    "react-native-modal": "^14.0.0-rc.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
+    "react-native-turnstile": "^1.0.9",
     "react-native-web": "^0.19.13",
-    "tailwindcss": "^3.4.17"
+    "react-native-webview": "13.12.5",
+    "tailwindcss": "^3.4.17",
+    "valibot": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.7",
