📦 dep(mobile, catalog): update to expo sdk 53

--- a/apps/catalog/app.json
+++ b/apps/catalog/app.json
@@ -39,7 +39,9 @@
           },
           "imageWidth": 200
         }
-      ]
+      ],
+      "expo-web-browser",
+      "expo-secure-store"
     ],
     "experiments": {
       "typedRoutes": true,
