--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -42,7 +42,8 @@
           "imageWidth": 160
         }
       ],
-      "expo-secure-store"
+      "expo-secure-store",
+      "expo-web-browser"
     ],
     "experiments": {
       "typedRoutes": true,
