--- a/apps/catalog/package.json
+++ b/apps/catalog/package.json
@@ -16,31 +16,32 @@
   },
   "dependencies": {
     "@expo-google-fonts/kiwi-maru": "^0.3.0",
-    "@expo/vector-icons": "^14.0.4",
+    "@expo/vector-icons": "^14.1.0",
     "@gorhom/bottom-sheet": "^4.6.4",
     "@react-navigation/native": "^7.0.14",
-    "expo": "~52.0.46",
-    "expo-constants": "~17.0.5",
-    "expo-dev-client": "~5.0.10",
-    "expo-font": "~13.0.3",
-    "expo-linking": "~7.0.5",
-    "expo-router": "4.0.20",
-    "expo-splash-screen": "~0.29.21",
-    "expo-status-bar": "~2.0.1",
-    "expo-system-ui": "~4.0.7",
-    "expo-web-browser": "~14.0.2",
+    "expo": "^53.0.0",
+    "expo-constants": "~17.1.6",
+    "expo-dev-client": "~5.2.1",
+    "expo-font": "~13.3.1",
+    "expo-linking": "~7.1.5",
+    "expo-router": "~5.1.0",
+    "expo-secure-store": "~14.2.3",
+    "expo-splash-screen": "~0.30.9",
+    "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "~5.0.9",
+    "expo-web-browser": "~14.2.0",
     "nativewind": "^4.1.23",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.9",
-    "react-native-gesture-handler": "~2.20.2",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.4",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-keyboard-controller": "^1.16.1",
-    "react-native-reanimated": "~3.16.7",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.8.0",
-    "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
+    "react-native-web": "^0.20.0",
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.26.7",
@@ -49,7 +50,7 @@
     "@mona-ca/postcss": "workspace:*",
     "@mona-ca/tailwind-config": "workspace:*",
     "@mona-ca/tsconfig": "workspace:*",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native/babel-preset": "^0.74.89",
     "@storybook/addon-a11y": "^8.6.12",
     "@storybook/addon-actions": "8.1.11",
@@ -71,7 +72,7 @@
     "@storybook/react-webpack5": "^8.6.12",
     "@storybook/test": "^8.5.2",
     "@storybook/test-runner": "^0.17.0",
-    "@types/react": "~18.3.18",
+    "@types/react": "~19.0.10",
     "babel-loader": "^9.2.1",
     "babel-plugin-module-resolver": "^5.0.2",
     "babel-plugin-react-native-web": "^0.19.13",
@@ -79,7 +80,7 @@
     "postcss": "^8.5.1",
     "postcss-loader": "^8.1.1",
     "prop-types": "^15.8.1",
-    "react-native-svg-transformer": "^1.5.0",
+    "react-native-svg-transformer": "^1.5.1",
     "storybook": "^8.5.2",
     "storybook-dark-mode": "^4.0.2",
     "style-loader": "^4.0.0",
