--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -16,41 +16,41 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.4",
+    "@expo/vector-icons": "^14.1.0",
     "@hookform/resolvers": "^5.1.1",
     "@mona-ca/core": "workspace:*",
     "@mona-ca/design-tokens": "workspace:*",
     "@mona-ca/eden-fetch": "workspace:*",
     "@mona-ca/tailwind-helpers": "workspace:*",
     "@mona-ca/ui": "workspace:*",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/native": "^7.0.14",
     "ajv": "^8.17.1",
-    "expo": "~52.0.46",
-    "expo-dev-client": "~5.0.20",
-    "expo-font": "~13.0.3",
-    "expo-linking": "~7.0.5",
-    "expo-router": "~4.0.21",
-    "expo-secure-store": "~14.0.1",
-    "expo-splash-screen": "~0.29.24",
-    "expo-status-bar": "~2.0.1",
-    "expo-system-ui": "~4.0.9",
-    "expo-web-browser": "~14.0.2",
-    "jotai": "^2.11.2",
+    "expo": "^53.0.12",
+    "expo-dev-client": "~5.2.1",
+    "expo-font": "~13.3.1",
+    "expo-linking": "~7.1.5",
+    "expo-router": "~5.1.0",
+    "expo-secure-store": "~14.2.3",
+    "expo-splash-screen": "~0.30.9",
+    "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "~5.0.9",
+    "expo-web-browser": "~14.2.0",
+    "jotai": "^2.12.5",
     "nativewind": "^4.1.23",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-hook-form": "^7.58.1",
-    "react-native": "0.76.9",
+    "react-native": "0.79.4",
     "react-native-keyboard-controller": "^1.16.1",
     "react-native-modal": "^14.0.0-rc.1",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.8.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
     "react-native-turnstile": "^1.0.9",
-    "react-native-web": "^0.19.13",
-    "react-native-webview": "13.12.5",
+    "react-native-web": "^0.20.0",
+    "react-native-webview": "13.13.5",
     "tailwindcss": "^3.4.17",
     "valibot": "^1.1.0"
   },
@@ -59,11 +59,11 @@
     "@babel/plugin-transform-class-static-block": "^7.27.1",
     "@mona-ca/tailwind-config": "workspace:*",
     "@mona-ca/tsconfig": "workspace:*",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.10",
     "babel-plugin-module-resolver": "^5.0.2",
     "jest": "^29.7.0",
-    "jest-expo": "~52.0.6",
-    "react-native-svg-transformer": "^1.5.0",
+    "jest-expo": "~53.0.7",
+    "react-native-svg-transformer": "^1.5.1",
     "react-test-renderer": "18.2.0"
   }
 }
