--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -16,9 +16,9 @@
   "devDependencies": {
     "@mona-ca/tsconfig": "workspace:*",
     "@turbo/gen": "^1.12.4",
-    "@types/react": "~18.2.61",
-    "@types/react-dom": "~18.2.19",
-    "react": "18.2.0",
+    "@types/react": "~19.0.10",
+    "@types/react-dom": "~19.0.0",
+    "react": "^19.0.0",
     "typescript": "^5.3.3"
   }
 }
