--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -13,7 +13,7 @@
     "test:w": "vitest --watch",
     "typecheck": "tsc --noEmit",
     "db:gen": "drizzle-kit generate",
-    "db:mig": "bun db:gen && wrangler d1 migrations apply mona-ca_db",
+    "db:mig": "wrangler d1 migrations apply mona-ca_db --local",
     "db:std": "cross-env LOCAL_DB_PATH=$(find .wrangler/state/v3/d1/miniflare-D1DatabaseObject -type f -name '*.sqlite' -print -quit) drizzle-kit studio --config drizzle.studio.config.ts",
     "db:std:remote": "drizzle-kit studio  --config drizzle.studio.remote.config.ts"
   },
@@ -26,7 +26,7 @@
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.6",
     "arctic": "^3.6.0",
-    "drizzle-orm": "^0.30.10",
+    "drizzle-orm": "~0.44.2",
     "elysia": "~1.2.25",
     "resend": "^4.2.0",
     "ulid-workers": "^2.1.0"
@@ -37,7 +37,7 @@
     "@mona-ca/tsconfig": "workspace:*",
     "@scalar/types": "0.1.5",
     "better-sqlite3": "^11.9.1",
-    "drizzle-kit": "^0.21.4",
+    "drizzle-kit": "~0.31.4",
     "pretty-format": "^29.7.0",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "2.1.8",
