--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -15,7 +15,7 @@
     "db:gen": "drizzle-kit generate",
     "db:mig": "wrangler d1 migrations apply mona-ca_db --local",
     "db:std": "cross-env LOCAL_DB_PATH=$(find .wrangler/state/v3/d1/miniflare-D1DatabaseObject -type f -name '*.sqlite' -print -quit) drizzle-kit studio --config drizzle.studio.config.ts",
-    "db:std:remote": "drizzle-kit studio  --config drizzle.studio.remote.config.ts"
+    "db:std:remote": "drizzle-kit studio"
   },
   "dependencies": {
     "@elysiajs/swagger": "^1.2.2",
