--- a/packages/eden-fetcher/tsconfig.json
+++ b/packages/eden-fetcher/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "extends": "@mona-ca/tsconfig/base.json",
+  "compilerOptions": {
+    "types": ["@cloudflare/workers-types/experimental", "@cloudflare/vitest-pool-workers"]
+  },
   "include": ["**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules", "dist"]
 }
