--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -24,9 +24,13 @@
     "@mona-ca/tailwind-helpers": "workspace:*",
     "@mona-ca/ui": "workspace:*",
     "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/native": "^7.0.14",
+    "@tanstack/query-core": "^5.85.3",
+    "@tanstack/react-query": "^5.85.3",
     "ajv": "^8.17.1",
     "expo": "^53.0.12",
+    "expo-crypto": "~14.1.5",
     "expo-dev-client": "~5.2.1",
     "expo-font": "~13.3.1",
     "expo-linking": "~7.1.5",
@@ -37,12 +41,15 @@
     "expo-system-ui": "~5.0.9",
     "expo-web-browser": "~14.2.0",
     "jotai": "^2.12.5",
+    "jotai-effect": "^2.0.5",
+    "jotai-tanstack-query": "^0.11.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.58.1",
     "react-native": "0.79.4",
     "react-native-keyboard-controller": "^1.16.1",
+    "react-native-mmkv": "^3.3.0",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
