--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,9 +13,9 @@
   "dependencies": {
     "@mona-ca/tailwind-helpers": "workspace:*",
     "@mona-ca/ui": "workspace:*",
-    "next": "^14.2.5",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "next": "15.5.2",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-turnstile": "^1.1.4",
     "tailwindcss": "^3.4.7"
   },
@@ -23,8 +23,8 @@
     "@mona-ca/postcss": "workspace:*",
     "@mona-ca/tailwind-config": "workspace:*",
     "@mona-ca/tsconfig": "workspace:*",
-    "@types/react": "^18.2.79",
-    "@types/react-dom": "^18.2.25",
+    "@types/react": "~19.0.0",
+    "@types/react-dom": "~19.0.0",
     "typescript": "^5.5.4"
   }
 }
