--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,11 +7,12 @@
     "dev": "wrangler dev ./src/server.ts",
     "check": "biome check --error-on-warnings --no-errors-on-unmatched",
     "check:fix": "bun run check --write",
-    "build": "wrangler deploy --dry-run --outdir dist",
+    "build": "wrangler deploy --dry-run --outdir .wrangler/dist",
     "start": "wrangler dev dist/index.js",
     "test": "vitest --run",
     "test:w": "vitest --watch",
     "typecheck": "tsc --noEmit",
+    "gen:types": "wrangler types ./src/types/worker-configuration.d.ts",
     "db:gen": "drizzle-kit generate",
     "db:mig": "wrangler d1 migrations apply mona-ca_db --local",
     "db:std": "cross-env LOCAL_DB_PATH=$(find .wrangler/state/v3/d1/miniflare-D1DatabaseObject -type f -name '*.sqlite' -print -quit) drizzle-kit studio --config drizzle.studio.config.ts",
@@ -33,7 +34,6 @@
   },
   "devDependencies": {
     "@cloudflare/vitest-pool-workers": "^0.6.16",
-    "@cloudflare/workers-types": "^4.20250404.0",
     "@mona-ca/tsconfig": "workspace:*",
     "@scalar/types": "0.1.5",
     "better-sqlite3": "^11.9.1",
