🎈 feat(api): add new worker configuration types and update biome.json for improved type handling

--- a/biome.json
+++ b/biome.json
@@ -8,8 +8,10 @@
       ".next",
       ".expo",
       "bin",
+      ".tsup",
       "./apps/api/drizzle",
-      "./apps/catalog/.storybook/mobile/storybook.requires.ts"
+      "./apps/catalog/.storybook/mobile/storybook.requires.ts",
+      "./apps/api/src/types/worker-configuration.d.ts"
     ],
     "include": ["**/*.ts*", "**/*.*js*", "**/*.json"]
   },
