--- a/packages/eden-fetch/package.json
+++ b/packages/eden-fetch/package.json
@@ -12,7 +12,7 @@
     "build:types": "tsup"
   },
   "dependencies": {
-    "@elysiajs/eden": "^1.1.3",
+    "@elysiajs/eden": "~1.2.0",
     "@mona-ca/core": "workspace:*"
   },
   "devDependencies": {
