🎈 feat(eden-fetch): add compiler options for worker configuration type support in tsconfig.json

--- a/packages/eden-fetch/tsconfig.json
+++ b/packages/eden-fetch/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "extends": "@mona-ca/tsconfig/base.json",
+  "compilerOptions": {
+    "types": ["../../apps/api/src/types/worker-configuration.d.ts"]
+  },
   "include": ["**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules", "dist"]
 }
