[MC-8] fix edenFetch type error (#95)
* 🎈 feat(api): update package.json and tsconfig.json for improved type handling and add new worker configuration types

* 🎈 feat(tools/tsconfig): add DOM and ESNext libraries to expo.json for improved type support

* 🎈 feat(api): add new worker configuration types and update biome.json for improved type handling

* ✨ feat(eden-fetch): add .gitignore, update package.json for type support, and add tsup configuration

* 💄 style(mobile/app/layout): remove console log from AppLayout for cleaner code

* 📦 chore(bun.lock): update dependencies and add workspace name for better organization

* 📦 chore(eden-fetch): update @elysiajs/eden dependency to version 1.2.0 and clean up tsconfig.json

* ✨ feat(workflows): add types check workflow for eden-fetch to ensure generated types are up to date

* 🎈 feat(eden-fetch): add compiler options for worker configuration type support in tsconfig.json

--- a/packages/eden-fetch/tsconfig.json
+++ b/packages/eden-fetch/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "@mona-ca/tsconfig/base.json",
   "compilerOptions": {
-    "types": ["@cloudflare/workers-types/experimental", "@cloudflare/vitest-pool-workers"]
+    "types": ["../../apps/api/src/types/worker-configuration.d.ts"]
   },
   "include": ["**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules", "dist"]
