--- a/packages/eden-fetch/package.json
+++ b/packages/eden-fetch/package.json
@@ -2,18 +2,22 @@
   "name": "@mona-ca/eden-fetch",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
+  "types": "./dist/index.d.ts",
   "main": "./src/index.ts",
   "scripts": {
     "check": "biome check --error-on-warnings --no-errors-on-unmatched",
     "check:fix": "bun run check --write",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "build:types": "tsup"
   },
   "dependencies": {
-    "@elysiajs/eden": "^1.1.3"
+    "@elysiajs/eden": "~1.2.0",
+    "@mona-ca/core": "workspace:*"
   },
   "devDependencies": {
     "@mona-ca/api": "workspace:*",
-    "@mona-ca/core": "workspace:*",
-    "@mona-ca/tsconfig": "workspace:*"
+    "@mona-ca/tsconfig": "workspace:*",
+    "tsup": "^8.5.0"
   }
 }
