--- a/apps/catalog/package.json
+++ b/apps/catalog/package.json
@@ -18,9 +18,11 @@
     "@expo-google-fonts/kiwi-maru": "^0.3.0",
     "@expo/vector-icons": "^14.1.0",
     "@gorhom/bottom-sheet": "^4.6.4",
+    "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/native": "^7.0.14",
     "expo": "^53.0.0",
     "expo-constants": "~17.1.6",
+    "expo-crypto": "~14.1.5",
     "expo-dev-client": "~5.2.1",
     "expo-font": "~13.3.1",
     "expo-linking": "~7.1.5",
@@ -36,6 +38,7 @@
     "react-native": "0.79.4",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-keyboard-controller": "^1.16.1",
+    "react-native-mmkv": "^3.3.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
