🎈 feat(catalog/app): add package name and update font configuration for better integration

--- a/apps/catalog/app.json
+++ b/apps/catalog/app.json
@@ -20,7 +20,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.monaca.mobile.catalog"
     },
     "web": {
       "bundler": "metro",
@@ -28,7 +29,16 @@
     },
     "plugins": [
       "expo-router",
-      "expo-font",
+      [
+        "expo-font",
+        {
+          "fonts": [
+            "../../node_modules/@expo-google-fonts/kiwi-maru/300Light/KiwiMaru_300Light.ttf",
+            "../../node_modules/@expo-google-fonts/kiwi-maru/400Regular/KiwiMaru_400Regular.ttf",
+            "../../node_modules/@expo-google-fonts/kiwi-maru/500Medium/KiwiMaru_500Medium.ttf"
+          ]
+        }
+      ],
       [
         "expo-splash-screen",
         {
