--- a/biome.json
+++ b/biome.json
@@ -11,7 +11,9 @@
       ".tsup",
       "./apps/api/drizzle",
       "./apps/catalog/.storybook/mobile/storybook.requires.ts",
-      "./apps/api/src/types/worker-configuration.d.ts"
+      "./apps/api/src/types/worker-configuration.d.ts",
+      "ios",
+      "android"
     ],
     "include": ["**/*.ts*", "**/*.*js*", "**/*.json"]
   },
