🎈 feat(api/env/variables): add SIGNUP_SESSION_PEPPER to environment variables for signup session management

--- a/apps/api/.dev.vars.example
+++ b/apps/api/.dev.vars.example
@@ -13,6 +13,7 @@ SESSION_PEPPER=
 EMAIL_VERIFICATION_SESSION_PEPPER=
 PASSWORD_RESET_SESSION_PEPPER=
 ACCOUNT_ASSOCIATION_SESSION_PEPPER=
+SIGNUP_SESSION_PEPPER=
 
 # Upstash Redis
 UPSTASH_REDIS_REST_URL=
