--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -11,7 +11,8 @@
   "scripts": {
     "check": "biome check --error-on-warnings --no-errors-on-unmatched",
     "check:fix": "bun run check --write",
-    "test": "bun test"
+    "test": "bun test",
+    "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
     "@mona-ca/tsconfig": "workspace:*",
