--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "main": "./src/index.ts",
   "scripts": {
-    "dev": "wrangler dev ./src/server.ts",
+    "dev": "wrangler dev ./src/routes/index.ts",
     "check": "biome check --error-on-warnings --no-errors-on-unmatched",
     "check:fix": "bun run check --write",
     "build": "wrangler deploy --dry-run --outdir .wrangler/dist",
