--- a/apps/api/wrangler.jsonc
+++ b/apps/api/wrangler.jsonc
@@ -1,7 +1,7 @@
 {
   "$schema": "../../node_modules/wrangler/config-schema.json",
   "name": "mona-ca-api",
-  "main": "./src/server.ts",
+  "main": "./src/routes/index.ts",
   "compatibility_date": "2025-02-04",
   "compatibility_flags": ["nodejs_compat"],
   "d1_databases": [
