--- a/packages/eden-fetch/tsconfig.json
+++ b/packages/eden-fetch/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "extends": "@mona-ca/tsconfig/base.json",
   "compilerOptions": {
-    "types": ["../../apps/api/types/worker-configuration.d.ts"]
+    "types": [
+      "../../apps/api/types/worker-configuration.d.ts",
+      "../../apps/api/types/cloudflare-test.d.ts",
+      "../../node_modules/@cloudflare/vitest-pool-workers/types/cloudflare-test.d.ts"
+    ]
   },
   "include": ["**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules", "dist"]
