⚙️ chore(api): add name for production

--- a/apps/api/wrangler.jsonc
+++ b/apps/api/wrangler.jsonc
@@ -20,6 +20,7 @@
   ],
   "env": {
     "production": {
+      "name": "mona-ca-api",
       "d1_databases": [
         {
           "binding": "DB",
