--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
   "[yaml]": {
     "editor.defaultFormatter": "redhat.vscode-yaml"
   },
+  "biome.requireConfiguration": true,
   "commit-message-editor.dynamicTemplate": [
     "{type}{scope}{breaking_change_exclamation}: {description}",
     "",
@@ -157,7 +158,7 @@
   ],
   "commit-message-editor.view.defaultView": "form",
   "editor.codeActionsOnSave": {
-    "quickfix.biome": "explicit",
+    "source.fixAll.biome": "explicit",
     "source.organizeImports.biome": "explicit"
   },
   "editor.defaultFormatter": "biomejs.biome",
