🗑️ refactor(api/http): remove unused convertRedirectableMobileScheme function and related tests; consolidate URL handling in new utility functions

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -5,8 +5,9 @@
   "main": "src/index.ts",
   "exports": {
     "./assets/*": "./assets/*",
-    "./const": "./src/const/index.ts",
-    "./utils": "./src/utils/index.ts"
+    "./http": "./src/http/index.ts",
+    "./email": "./src/email/index.ts",
+    "./common": "./src/common/index.ts"
   },
   "scripts": {
     "check": "biome check --error-on-warnings --no-errors-on-unmatched",
