--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,7 +7,8 @@
     "./assets/*": "./assets/*",
     "./http": "./src/http/index.ts",
     "./email": "./src/email/index.ts",
-    "./common": "./src/common/index.ts"
+    "./types": "./src/types/index.ts",
+    "./result": "./src/result/index.ts"
   },
   "scripts": {
     "check": "biome check --error-on-warnings --no-errors-on-unmatched",
