--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -16,48 +16,48 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.1.0",
+    "@expo/vector-icons": "^15.0.3",
     "@hookform/resolvers": "^5.1.1",
     "@mona-ca/core": "workspace:*",
     "@mona-ca/design-tokens": "workspace:*",
-    "@mona-ca/treaty-fetch": "workspace:*",
     "@mona-ca/tailwind-helpers": "workspace:*",
+    "@mona-ca/treaty-fetch": "workspace:*",
     "@mona-ca/ui": "workspace:*",
-    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/native": "^7.0.14",
     "@tanstack/query-core": "^5.85.3",
     "@tanstack/react-query": "^5.85.3",
     "ajv": "^8.17.1",
-    "expo": "^53.0.12",
-    "expo-crypto": "~14.1.5",
-    "expo-dev-client": "~5.2.1",
-    "expo-font": "~13.3.1",
-    "expo-linking": "~7.1.5",
-    "expo-router": "~5.1.0",
-    "expo-secure-store": "~14.2.3",
-    "expo-splash-screen": "~0.30.9",
-    "expo-status-bar": "~2.2.3",
-    "expo-system-ui": "~5.0.9",
-    "expo-web-browser": "~14.2.0",
+    "expo": "^54.0.0",
+    "expo-crypto": "~15.0.8",
+    "expo-dev-client": "~6.0.20",
+    "expo-font": "~14.0.10",
+    "expo-linking": "~8.0.11",
+    "expo-router": "~6.0.21",
+    "expo-secure-store": "~15.0.8",
+    "expo-splash-screen": "~31.0.13",
+    "expo-status-bar": "~3.0.9",
+    "expo-system-ui": "~6.0.9",
+    "expo-web-browser": "~15.0.10",
     "jotai": "^2.12.5",
     "jotai-effect": "^2.0.5",
     "jotai-tanstack-query": "^0.11.0",
     "nativewind": "^4.1.23",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-hook-form": "^7.58.1",
-    "react-native": "0.79.4",
+    "react-native": "0.81.5",
     "react-native-keyboard-controller": "^1.16.1",
     "react-native-mmkv": "^3.3.0",
     "react-native-modal": "^14.0.0-rc.1",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-svg": "15.11.2",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-turnstile": "^1.0.9",
-    "react-native-web": "^0.20.0",
-    "react-native-webview": "13.13.5",
+    "react-native-web": "^0.21.0",
+    "react-native-webview": "13.15.0",
     "tailwindcss": "^3.4.17",
     "valibot": "^1.1.0"
   },
@@ -66,10 +66,10 @@
     "@babel/plugin-transform-class-static-block": "^7.27.1",
     "@mona-ca/tailwind-config": "workspace:*",
     "@mona-ca/tsconfig": "workspace:*",
-    "@types/react": "~19.0.10",
+    "@types/react": "~19.1.10",
     "babel-plugin-module-resolver": "^5.0.2",
     "jest": "^29.7.0",
-    "jest-expo": "~53.0.7",
+    "jest-expo": "~54.0.16",
     "react-native-svg-transformer": "^1.5.1",
     "react-test-renderer": "18.2.0"
   }
