--- a/apps/catalog/package.json
+++ b/apps/catalog/package.json
@@ -4,8 +4,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "gen:mobile": "sb-rn-get-stories -c ./.storybook/mobile",
     "sb": "storybook dev -p 6006 --no-open -c ./.storybook/web",
+    "sb:gen": "sb-rn-get-stories",
     "sb:mobile": "cross-env EXPO_PUBLIC_STORYBOOK_ENABLED=true expo start --port=8082",
     "sb:ios": "cross-env EXPO_PUBLIC_STORYBOOK_ENABLED=true expo start --ios --port=8082",
     "sb:build": "storybook build -o ./.storybook/static -c ./.storybook/web",
@@ -18,7 +18,6 @@
   "dependencies": {
     "@expo-google-fonts/kiwi-maru": "^0.3.0",
     "@expo/vector-icons": "^15.0.3",
-    "@gorhom/bottom-sheet": "^4.6.4",
     "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/native": "^7.0.14",
     "expo": "^54.0.0",
@@ -33,7 +32,7 @@
     "expo-status-bar": "~3.0.9",
     "expo-system-ui": "~6.0.9",
     "expo-web-browser": "~15.0.10",
-    "nativewind": "^4.1.23",
+    "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
@@ -56,25 +55,16 @@
     "@mona-ca/tsconfig": "workspace:*",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native/babel-preset": "^0.74.89",
-    "@storybook/addon-a11y": "^8.6.12",
-    "@storybook/addon-actions": "8.1.11",
-    "@storybook/addon-essentials": "^8.6.12",
-    "@storybook/addon-interactions": "^8.6.12",
-    "@storybook/addon-links": "^8.6.12",
-    "@storybook/addon-onboarding": "^8.6.12",
-    "@storybook/addon-ondevice-actions": "^8.6.2",
-    "@storybook/addon-ondevice-controls": "^8.6.2",
+    "@storybook/addon-a11y": "9.1.17",
+    "@storybook/addon-onboarding": "9.1.17",
+    "@storybook/addon-ondevice-actions": "^9.0.0",
+    "@storybook/addon-ondevice-controls": "^9.0.0",
     "@storybook/addon-react-native-web": "^0.0.24",
-    "@storybook/addon-storysource": "^8.6.12",
     "@storybook/addon-styling-webpack": "^1.0.1",
-    "@storybook/addon-themes": "^8.6.12",
+    "@storybook/addon-themes": "9.1.17",
     "@storybook/addon-webpack5-compiler-swc": "^1.0.6",
-    "@storybook/blocks": "^8.6.12",
-    "@storybook/preview-api": "8.1.11",
-    "@storybook/react": "^8.6.12",
-    "@storybook/react-native": "^8.6.2",
-    "@storybook/react-webpack5": "^8.6.12",
-    "@storybook/test": "^8.5.2",
+    "@storybook/react-native": "^9.0.0",
+    "@storybook/react-webpack5": "9.1.17",
     "@storybook/test-runner": "^0.17.0",
     "@types/react": "~19.1.10",
     "babel-loader": "^9.2.1",
@@ -85,9 +75,9 @@
     "postcss-loader": "^8.1.1",
     "prop-types": "^15.8.1",
     "react-native-svg-transformer": "^1.5.1",
-    "storybook": "^8.5.2",
-    "storybook-dark-mode": "^4.0.2",
+    "storybook": "9.1.17",
     "style-loader": "^4.0.0",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "@storybook/addon-docs": "9.1.17"
   }
 }
