--- a/apps/catalog/tsconfig.json
+++ b/apps/catalog/tsconfig.json
@@ -9,7 +9,10 @@
     "./.storybook/**/*",
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
-    "nativewind-env.d.ts"
+    "nativewind-env.d.ts",
   ],
-  "exclude": ["node_modules", "dist"]
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
